# BigOS

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
CMake/: TestsConfig.cmake  preset-mixins.json
CMake/toolchains/: riscv64-clang.cmake  riscv64-common.cmake  riscv64-gcc.cmake
docs/doxygen/: groups.dox
include/debug/: debug_stdio.h  reloc.h
include/drivers/dt/: dt_props.h
include/dt/: dt.h
include/libboot/dt/: dt.h
include/libcore/: address.h  array_sizes.h  bitutils.h  buffer.h  csr.h  error.h  math.h  memory_types.h  sbi.h  stdio.h  string.h  types.h  version.h
include/stdbigos/: bitutils.h  buffer.h
src/bootloader/: CMakeLists.txt  dt_bootutils.c  dt_bootutils.h  fdt.c  main.c
src/bootloader/elf/: elf_defines.h
src/debug/: CMakeLists.txt  debug_stdio.c
src/debuglibs/relocations/: reloc.c
src/drivers/: console.c  uart.c
src/drivers/dt/: dt_access.c  dt_alloc.c  dt_alloc.h  dt_init.c  dt_node.h  dt_parser.c  dt_parser.h
src/example_dtree/: entry.c
src/example_machine/: entry.c
src/kernel/: CMakeLists.txt
src/kernel/address_space/: address_space.h
src/kernel/clock/: clock.h
src/kernel/hal/: hal.c  hal_internal.h
src/kernel/logging/: klog.c  klog.h
src/lib/debug/: debug_stdio.c
src/lib/dt/: dt_access.c  dt_common.c  dt_common.h
src/lib/startup/: startup.c
src/lib/stdbigos/: bitutils.c  buffer.c  sbi.c  string.c
src/libboot/dt/: CMakeLists.txt  dt_access.c  dt_common.c  dt_common.h  (+2 more)
src/libcore/: CMakeLists.txt  bitutils.c  buffer.c  string.c  version.c
tests/: CMakeLists.txt
(+32 files in other folders)
